fixed navbar bug for words to align

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ nav {
 	top: 0;
 	z-index: 1;
 	margin-left:500px;
+	width:100%;
 	
 
   }
